--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.7.7",
+    "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3"
   },
